# handwritten-to-data

./: .gitignore  README.md  pyproject.toml
configs/: _fewshot.yaml  pipeline.yaml  pipeline_p1.yaml
data/cv/: train.jsonl  val.jsonl
notebooks/: 01_inference.ipynb  01_train_lora.ipynb  02_inference.ipynb  02_train_lora.ipynb  03_colab_debug.ipynb
research/: discussion.txt  files.txt  kernels_all.txt  kernels_top.txt  leaderboard.txt  sample_submission.csv
research/kernels/anastasiapetrunia_eda-fixing-the-48k-silver-hallucination-bug/: eda-fixing-the-48k-silver-hallucination-bug.ipynb  kernel-metadata.json
research/kernels/dvoitekh_official-baseline-for-handwritten-to-data/: kernel-metadata.json  official-baseline-for-handwritten-to-data.ipynb
research/kernels/dvoitekh_official-evaluation-metric-text-normalization/: kernel-metadata.json  official-evaluation-metric-text-normalization.ipynb
research/kernels/lakhindarpal_handwritten-to-data-zeroshot-qwen3-vl-8b/: handwritten-to-data-zeroshot-qwen3-vl-8b.ipynb  kernel-metadata.json
scripts/: build_cv_split.py  clean_silver.py  dictation_pseudolabels.py  ensemble.py  mine_fewshot.py  prepare_lora_data.py  run_inference.py  score_cv.py  self_distill.py
src/htr/: __init__.py  backend.py  config.py  data.py  image_ops.py  pipeline.py  postproc.py  prompts.py  schemas.py  silver.py
