[project]
name = "htr"
version = "0.1.0"
description = "Kaggle Handwritten-to-Data: Ukrainian HTR pipeline + LoRA fine-tune (Kaggle Notebooks)."
requires-python = ">=3.11"
# Minimal deps — runs on a Mac for CV-split / silver-cleaning / scoring work.
# The GPU stack (torch/unsloth/transformers/peft/trl/bitsandbytes) is in the
# `gpu` extra and intended for Kaggle Notebooks only.
dependencies = [
    "Pillow>=10.4.0",
    "tqdm>=4.66.0",
    "typing_extensions>=4.12.0",
    # Data
    "huggingface_hub>=0.26.0",
    "datasets>=3.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Image ops
    "opencv-python-headless>=4.10.0",
    # Config / CLI
    "pyyaml>=6.0.2",
    "click>=8.1.7",
    # Dev
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
# Installed inside Kaggle notebooks (the notebooks do this with `!pip install`).
gpu = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "bitsandbytes>=0.44.0",
    "unsloth>=2024.10",
    "unsloth_zoo>=2024.10",
    "xformers>=0.0.28",
]
viz = ["matplotlib>=3.9.0", "seaborn>=0.13.0"]
metric-dev = ["pytest>=8.3.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
